--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Tech Gecko</title>
+    <title>TechGecko</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -65,7 +65,7 @@
   <div class="videotext container position-absolute text-center text-md-left mb-md-5 ml-md-5 p-md-3 d-sm-block">
     <div class="row">
       <div class="col-12">
-        <h2 class="sudoh1 textshadow w-100">TECH GECKO</h2>
+        <h2 class="sudoh1 textshadow w-100">TECHGECKO</h2>
         <h1 class="sudoh3 textshadow" style="font-weight:300;"><strong>Newcastle Based Web Developers</strong></h1>
       </div>
     </div>
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="col-12 p-3 row mt-1">
           <div class="col-12 text-center">
-            <h2 class="mb-4">We are a small <span class="textcolor">website developing</span> company based in Newcastle Upon Tyne, focused in <span class="textcolor">affordable</span>, <span class="textcolor">responsive</span> and <span class="textcolor">modern</span> websites.</h2>
+            <h2 class="mb-4">We are a small <span class="textcolor">website developing</span> company based in Newcastle Upon Tyne, focused in <span class="textcolor">affordable</span>, <span class="textcolor">responsive</span> and <span class="textcolor">modern</span> websites that look great on all devices.</h2>
           </div>
           <div class="w-100 d-flex justify-content-center">
             <a class="btn-primary text-center m-auto d-flex align-items-center" href="">READ MORE <i class="fas fa-chevron-right ml-2"></i></a>
