--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   </button>
   <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
     <div class="navbar-nav text-center align-items-center">
-      <a class="nav-item nav-link" href="#">ABOUT US</a>
-      <a class="nav-item nav-link" href="#">PACKAGES</a>
-      <a class="nav-item nav-link d-lg-none mb-3" href="#">CONTACT</a>
+      <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
+      <a class="nav-item nav-link" href="/resources/packages">PACKAGES</a>
+      <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
       <a class="nav-item nav-link contactbtn sudoh6 d-none d-lg-block mx-3" href="#">CONTACT</a>
     </div>
   </div>
@@ -85,7 +85,7 @@
             <h2 class="mb-4">We are a small <span class="textcolor">website developing</span> company based in Newcastle Upon Tyne, focused in <span class="textcolor">affordable</span>, <span class="textcolor">responsive</span> and <span class="textcolor">modern</span> websites that look great on all devices.</h2>
           </div>
           <div class="w-100 d-flex justify-content-center">
-            <a class="btn-primary text-center m-auto d-flex align-items-center" href="">READ MORE <i class="fas fa-chevron-right ml-2"></i></a>
+            <a class="btn-primary text-center m-auto d-flex align-items-center" href="/resources/aboutus">READ MORE <i class="fas fa-chevron-right ml-2"></i></a>
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div>
-          <a class="btn-primary" href="">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
+          <a class="btn-primary" href="/resources/packages">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@
           </div>
         </div>
         <div>
-          <a class="btn-primary" href="">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
+          <a class="btn-primary" href="/resources/packages">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
         </div>
       </div>
     </div>
@@ -210,7 +210,7 @@
           </div>
         </div>
         <div>
-          <a class="btn-primary" href="">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
+          <a class="btn-primary" href="/resources/packages">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
         </div>
       </div>
     </div>
@@ -224,7 +224,7 @@
         <h2 class="col-12 mb-4">Already have a website?</h2>
         <div class="col-12">
           <h4 class="mb-4">Get in contact, we can help optimise, streamline or rebuild for you</h4>
-          <a class="btn-primary" href="">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a>
+          <a class="btn-primary" href="/resources/contact">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a>
         </div>
       </div>
     </div>
