--- a/resources/aboutus.html
+++ b/resources/aboutus.html
@@ -49,9 +49,9 @@
   </button>
   <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
     <div class="navbar-nav text-center align-items-center">
-      <a class="nav-item nav-link" href="#">ABOUT US</a>
-      <a class="nav-item nav-link" href="#">PACKAGES</a>
-      <a class="nav-item nav-link d-lg-none mb-3" href="#">CONTACT</a>
+      <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
+      <a class="nav-item nav-link" href="/resources/packages">PACKAGES</a>
+      <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
       <a class="nav-item nav-link contactbtn sudoh6 d-none d-lg-block mx-3" href="#">CONTACT</a>
     </div>
   </div>
@@ -69,7 +69,7 @@
                     We aim to help the smaller businesses. Your barbers, cafes, indie businesses. We want to help you get your business out there and gather more customers.<br><br>
                     We know what works, and what people want to see. They want modern, easy to navigate, less cluttered sites. This is what we specialise in.<br><br>
                     Contact us now, and we can have a chat about how we can help you with your business.</p><br>
-                <a class="btn-primary pt-5 align-items-center" href="">GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i></a>
+                <a class="btn-primary pt-5 align-items-center" href="/contact">GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i></a>
             </div>
             <div class="col-12 col-md-5">
                 <img class="w-100" src="../resources/images/MacImg.jpg" alt="WebsiteDevelopment" style="border-radius: 40px;">
