--- a/resources/packages.html
+++ b/resources/packages.html
@@ -49,9 +49,9 @@
   </button>
   <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
     <div class="navbar-nav text-center align-items-center">
-      <a class="nav-item nav-link" href="#">ABOUT US</a>
-      <a class="nav-item nav-link" href="#">PACKAGES</a>
-      <a class="nav-item nav-link d-lg-none mb-3" href="#">CONTACT</a>
+      <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
+      <a class="nav-item nav-link" href="/resources/packages">PACKAGES</a>
+      <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
       <a class="nav-item nav-link contactbtn sudoh6 d-none d-lg-block mx-3" href="#">CONTACT</a>
     </div>
   </div>
