--- a/resources/aboutus.html
+++ b/resources/aboutus.html
@@ -43,7 +43,7 @@
   <!-- NAVIGATION BAR -->
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <a class="navbar-brand ml-3" href="#"><h1>LOGO</h1></a>
+  <a class="navbar-brand ml-3" href="/"><h1>LOGO</h1></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -69,7 +69,7 @@
                     We aim to help the smaller businesses. Your barbers, cafes, indie businesses. We want to help you get your business out there and gather more customers.<br><br>
                     We know what works, and what people want to see. They want modern, easy to navigate, less cluttered sites. This is what we specialise in.<br><br>
                     Contact us now, and we can have a chat about how we can help you with your business.</p><br>
-                <a class="btn-primary pt-5 align-items-center" href="/contact">GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i></a>
+                <a class="btn-primary pt-5 align-items-center" href="/resources/contact">GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i></a>
             </div>
             <div class="col-12 col-md-5">
                 <img class="w-100" src="../resources/images/MacImg.jpg" alt="WebsiteDevelopment" style="border-radius: 40px;">
