--- a/resources/packages.html
+++ b/resources/packages.html
@@ -43,7 +43,7 @@
   <!-- NAVIGATION BAR -->
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <a class="navbar-brand ml-3" href="#"><h1>LOGO</h1></a>
+  <a class="navbar-brand ml-3" href="/"><h1>LOGO</h1></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
