--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
       <a class="nav-item nav-link" href="/resources/packages">PACKAGES</a>
       <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
-      <a class="nav-item nav-link contactbtn sudoh6 d-none d-lg-block mx-3" href="#">CONTACT</a>
+      <a class="nav-item nav-link contactbtn sudoh6 d-none d-lg-block mx-3" href="/resources/contact">CONTACT</a>
     </div>
   </div>
 </nav>
