--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="col-12 p-3 row mt-1">
           <div class="col-12 text-center">
-            <h2 class="mb-4">We are a small <span class="textcolor">website developing</span> company based in Newcastle Upon Tyne, focused in <span class="textcolor">affordable</span>, <span class="textcolor">responsive</span> and <span class="textcolor">modern</span> websites that look great on all devices.</h2>
+            <h2 class="mb-4">We are a small <span class="textcolor">website developing</span> company based in Newcastle Upon Tyne, focused on <span class="textcolor">affordable</span>, <span class="textcolor">responsive</span> and <span class="textcolor">modern</span> websites that look great on all devices.</h2>
           </div>
           <div class="w-100 d-flex justify-content-center">
             <a class="btn-primary text-center m-auto d-flex align-items-center" href="/resources/aboutus">READ MORE <i class="fas fa-chevron-right ml-2"></i></a>
@@ -116,7 +116,7 @@
           </div>
           <div class="col-12 col-md-6 mb-2 mt-3">
             <h4><strong><i class="fas fa-mobile-android-alt"></i> Responsive</strong></h4>
-            <p>With so many screen sizes, your website needs to be able to flex and match to every phone, tablet, laptop and everything in between. We ensure your website looks great and stays responsive no matter the size.</p>
+            <p>With so many screen sizes, your website needs to be able to flex and match to every phone, tablet, laptop and everything in between. We ensure your website looks great and stays responsive, no matter the size.</p>
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
       <div class="col-12 p-0 py-5 p-md-5 row mt-1 text-center">
         <h2 class="col-12 mb-4">Already have a website?</h2>
         <div class="col-12">
-          <h4 class="mb-4">Get in contact, we can help optimise, streamline or rebuild for you</h4>
+          <h4 class="mb-4">We can help optimise, streamline or rebuild for you</h4>
           <a class="btn-primary" href="/resources/contact">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a>
         </div>
       </div>
