--- a/resources/aboutus.html
+++ b/resources/aboutus.html
@@ -65,8 +65,8 @@
             </div>
             <div class="col-12 col-md-7 text-center text-md-left">
                 <p>We are a small website developing company based in Newcastle Upon Tyne.<br><br> 
-                    We found there are many companies based at building big, powerful websites which charge an arm and a leg, but will also charge huge fees for smaller, more simplistic websites. This is where we decided to come in.<br><br>
-                    We aim to help the smaller businesses. Your barbers, cafes, indie businesses. We want to help you get your business out there and gather more customers.<br><br>
+                    We understand there are many companies that build big, powerful websites with a premium rate, but will also charge huge fees for smaller, more simplistic websites. This is where we come in.<br><br>
+                    We aim to help the smaller, independant businesses. Your barbers, cafes, tattoo artists, we want to help you get your business out there and gather more customers.<br><br>
                     We know what works, and what people want to see. They want modern, easy to navigate, less cluttered sites. This is what we specialise in.<br><br>
                     Contact us now, and we can have a chat about how we can help you with your business.</p><br>
                 <a class="btn-primary pt-5 align-items-center" href="/resources/contact">GET IN TOUCH<i class="fas fa-chevron-right ml-2"></i></a>
