--- a/resources/contact.html
+++ b/resources/contact.html
@@ -63,7 +63,7 @@
             <h1 class="col-12 mb-3 text-center text-md-left">Contact</h1>
             <div class="col-12 col-md-5 text-center text-md-left mb-5 mb-md-0">
                 <p>Please feel free to give us a call or an email whenever suits you:</p>
-                <p><i class="fas fa-envelope"></i></i> info@fatchance.com</p>
+                <p><i class="fas fa-envelope"></i></i> sam@techgecko.uk</p>
                 <p><i class="fa-solid fa-phone"></i> 07985791808</p>
             </div>
             <div class="col-12 col-md-7 d-flex justify-content-center">
@@ -71,8 +71,10 @@
                     <div>
                       <form class="w-100">
                         <div class="form-group">
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
-                          
+                          <input type="contactname" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Name">                          
+                        </div>
+                        <div class="form-group">
+                          <input type="businessname" class="form-control" id="BusinessName" aria-describedby="emailHelp" placeholder="Business Name">                          
                         </div>
                         <div class="form-group">
                           <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Email">
