--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <!-- SMALL INFO TEXT -->
 
 <main class="">
-  <div class="reveal">
+  <div class="revealdelay">
     <div class="container my-5 smallinfodiv p-0 p-md-3">
       <div class="row">
         <div class="col-12 p-3 row mt-1">
