--- a/resources/packages.html
+++ b/resources/packages.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>About Us</title>
+    <title>Packages</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -58,8 +58,20 @@
 </nav>
   
 <main>
-
-
+  <div class="container my-3 my-md-5">
+    <div class="row">
+        <div class="col-12 mb-2 text-center text-md-left">
+            <h1>Packages</h1>
+        </div>
+        <div class="col-12 text-center text-md-left">
+            <p>We are a small website developing company based in Newcastle Upon Tyne.<br><br> 
+                We understand there are many companies that build big, powerful websites at a premium rate, but will also charge huge fees for smaller, more simplistic websites. This is where we come in.<br><br>
+                We aim to help the smaller, independant businesses - your barbers, cafes, tattoo artists, we want to help you get your business out there and gather more customers.<br><br>
+                We know what works, and what people want to see. They want modern, easy to navigate, less cluttered sites. This is what we specialise in.<br><br>
+                Contact us now, and we can have a chat about how we can help you with your business.</p><br>
+        </div>
+    </div>
+</div>
 </main>
 
 <section>
