--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="resources\css\index.css">
 
     <!-- Website Icon -->
-    <link rel="icon" href="resources/pictures/Logo.jpg" type="image/icon type">
+    <link rel="icon" href="resources/images/Logo.png" type="image/icon type">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +43,7 @@
   <!-- NAVIGATION BAR -->
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <a class="navbar-brand ml-3" href="#"><h1>LOGO</h1></a>
+  <a class="navbar-brand ml-3" href="#"><img class="navlogo" src="resources/images/FullLogo.png" alt="TechGeckoFullLogo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -65,7 +65,8 @@
   <div class="videotext container position-absolute text-center text-md-left mb-md-5 ml-md-5 p-md-3 d-sm-block">
     <div class="row">
       <div class="col-12">
-        <h2 class="sudoh1 textshadow w-100">TECHGECKO</h2>
+        <img src="resources/images/Logo.png" alt="TechGeckoLogo">
+        <h2 class="sudoh1thin textshadow w-100"><strong>TECH</strong>GECKO</h2>
         <h1 class="sudoh3 textshadow" style="font-weight:300;"><strong>Newcastle Based Web Developers</strong></h1>
       </div>
     </div>
