--- a/resources/aboutus.html
+++ b/resources/aboutus.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../resources\css\index.css">
 
     <!-- Website Icon -->
-    <link rel="icon" href="resources/pictures/Logo.jpg" type="image/icon type">
+    <link rel="icon" href="images/Logo.png" type="image/icon type">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +43,7 @@
   <!-- NAVIGATION BAR -->
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <a class="navbar-brand ml-3" href="/"><h1>LOGO</h1></a>
+  <a class="navbar-brand ml-3" href="#"><img class="navlogo" src="images/FullLogo.png" alt="TechGeckoFullLogo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
