--- a/resources/packages.html
+++ b/resources/packages.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../resources\css\index.css">
 
     <!-- Website Icon -->
-    <link rel="icon" href="resources/pictures/Logo.jpg" type="image/icon type">
+    <link rel="icon" href="images/Logo.png" type="image/icon type">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +43,7 @@
   <!-- NAVIGATION BAR -->
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <a class="navbar-brand ml-3" href="/"><h1>LOGO</h1></a>
+  <a class="navbar-brand ml-3" href="#"><img class="navlogo" src="images/FullLogo.png" alt="TechGeckoFullLogo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -57,19 +57,61 @@
   </div>
 </nav>
   
-<main>
+<main class="packagemain py-5">
   <div class="container my-3 my-md-5">
     <div class="row">
-        <div class="col-12 mb-2 text-center text-md-left">
+        <div class="col-12 mb-4 text-center text-md-left">
             <h1>Packages</h1>
         </div>
-        <div class="col-12 text-center text-md-left">
-            <p>We are a small website developing company based in Newcastle Upon Tyne.<br><br> 
-                We understand there are many companies that build big, powerful websites at a premium rate, but will also charge huge fees for smaller, more simplistic websites. This is where we come in.<br><br>
-                We aim to help the smaller, independant businesses - your barbers, cafes, tattoo artists, we want to help you get your business out there and gather more customers.<br><br>
-                We know what works, and what people want to see. They want modern, easy to navigate, less cluttered sites. This is what we specialise in.<br><br>
-                Contact us now, and we can have a chat about how we can help you with your business.</p><br>
+        <div class="col-12 row packagediv p-4">
+          <div class="col-12 text-center text-md-left">
+              <h2>Standard Package</h2>
+              <div class="d-flex flex-column mb-4">
+                <h2 class="mr-3">£500</h2><h5><em>or £100 a month, over 6 months</em></h5>
+              </div>             
+          </div>
+          <div class="col-12 col-md-6 row text-center text-md-left">
+            <h5 class="col-6 pb-2">3 - 5 pages</h5>
+            <h5 class="col-6 pb-2">Modern design</h5>
+            <h5 class="col-6 pb-2">2 amends monthly</h5>
+            <h5 class="col-6 pb-2">£15 upkeep</h5>
+          </div>
+          <div class="col-12 col-md-6 text-center text-md-left">
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</h5>
+          </div>
         </div>
+    </div>
+    <div class="row my-5">
+      <div class="col-12 row packagediv p-4">
+        <div class="col-12 text-center text-md-left">
+            <h2>Premium Package</h2><br>
+        </div>
+        <div class="col-6 row">
+          <h5 class="col-6 pb-2">5 - 10 pages</h5>
+          <h5 class="col-6 pb-2">Modern design</h5>
+          <h5 class="col-6 pb-2">5 amends monthly</h5>
+          <h5 class="col-6 pb-2">£20 upkeep</h5>
+        </div>
+        <div class="col-6">
+          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</h5>
+        </div>
+      </div>
+    </div>
+    <div class="row my-5">
+      <div class="col-12 row packagediv p-4">
+        <div class="col-12 text-center text-md-left">
+            <h2>Bespoke Package</h2><br>
+        </div>
+        <div class="col-6 row">
+          <h5 class="col-6 pb-2">Max 20 pages</h5>
+          <h5 class="col-6 pb-2">Bespoke custom design</h5>
+          <h5 class="col-6 pb-2">Unlimited amends</h5>
+          <h5 class="col-6 pb-2">*£25 upkeep</h5>
+        </div>
+        <div class="col-6">
+          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</h5>
+        </div>
+      </div>
     </div>
 </div>
 </main>
