--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- NAVIGATION BAR -->
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <a class="navbar-brand ml-3" href="#"><img class="navlogo" src="resources/images/FullLogo.png" alt="TechGeckoFullLogo"></a>
+  <a class="navbar-brand ml-md-3" href="#"><img class="navlogo" src="resources/images/FullLogo.png" alt="TechGeckoFullLogo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -66,8 +66,8 @@
     <div class="row">
       <div class="col-12">
         <img src="resources/images/Logo.png" alt="TechGeckoLogo">
-        <h2 class="sudoh1thin textshadow w-100"><strong>TECH</strong>GECKO</h2>
-        <h1 class="sudoh3 textshadow" style="font-weight:300;"><strong>Newcastle Based Web Developers</strong></h1>
+        <h2 class="sudoh1thin textshadow w-100 mb-0"><strong>TECH</strong>GECKO</h2>
+        <h1 class="sudoh3 textshadow mt-0" style="font-weight:300;"><strong>Newcastle Based Web Developers</strong></h1>
       </div>
     </div>
   </div>
