--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="videotext container position-absolute text-center text-md-left mb-md-5 ml-md-5 p-md-3 d-sm-block">
     <div class="row">
       <div class="col-12">
-        <img src="resources/images/Logo.png" alt="TechGeckoLogo">
+        <img class="heroimg" src="resources/images/Logo.png" alt="TechGeckoLogo">
         <h2 class="sudoh1thin textshadow w-100 mb-0"><strong>TECH</strong>GECKO</h2>
         <h1 class="sudoh3 textshadow mt-0" style="font-weight:300;"><strong>Newcastle Based Web Developers</strong></h1>
       </div>
