--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <p>3 - 5 Pages</p>
+            <p><i class="far fa-file-alt mr-2"></i>Max 10 Pages</p>
           </div>
           <div class="col-12">
-            <p>Modern Design</p>
+            <p><i class="fas fa-clipboard mr-2"></i>Modern Design</p>
           </div>
           <div class="col-12">
-            <p>2 Amends Monthly</p>
+            <p><i class="fas fa-pencil-alt mr-2"></i>2 Amends Monthly</p>
           </div>
           <div class="col-12">
-            <p>£15 Monthly Upkeep</p>
+            <p><i class="fas fa-coins mr-2"></i>£20 Monthly Upkeep</p>
           </div>
         </div>
         <div>
@@ -169,16 +169,16 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <p>5 - 10 Pages</p>
+            <p><i class="far fa-file-alt mr-2"></i>Max 25 Pages</p>
           </div>
           <div class="col-12">
-            <p>Modern Design</p>
+            <p><i class="fas fa-clipboard mr-2"></i>Modern Design</p>
           </div>
           <div class="col-12">
-            <p>5 Amends Monthly</p>
+            <p><i class="fas fa-pencil-alt mr-2"></i>5 Amends Monthly</p>
           </div>
           <div class="col-12">
-            <p>£20 Monthly Upkeep</p>
+            <p><i class="fas fa-coins mr-2"></i>£25 Monthly Upkeep</p>
           </div>
         </div>
         <div>
@@ -198,16 +198,16 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <p>Max 20 Pages</p>
+            <p><i class="far fa-file-alt mr-2"></i>Unlimited Pages</p>
           </div>
           <div class="col-12">
-            <p>Bespoke Custom Design</p>
+            <p><i class="fas fa-clipboard mr-2"></i>Bespoke Custom Design</p>
           </div>
           <div class="col-12">
-            <p>Unlimited Amends</p>
+            <p><i class="fas fa-pencil-alt mr-2"></i>Unlimited Amends</p>
           </div>
           <div class="col-12">
-            <p><span class="textcolor">*</span>£25 Monthly Upkeep</p>
+            <p><i class="fas fa-coins mr-2"></i><span class="textcolor">*</span>£35 Monthly Upkeep</p>
           </div>
         </div>
         <div>
@@ -219,9 +219,9 @@
 </section>
 
 <section class="websitediv reveal">
-  <div class="container py-3 my-5">
+  <div class="container py-1 my-5">
     <div class="row m-0">
-      <div class="col-12 p-0 py-5 p-md-5 row mt-1 text-center">
+      <div class="col-12 p-0 py-1 p-md-5 row mt-1 text-center">
         <h2 class="col-12 mb-4">Already have a website?</h2>
         <div class="col-12">
           <h4 class="mb-4">We can help optimise, streamline or rebuild for you</h4>
