--- a/resources/contact.html
+++ b/resources/contact.html
@@ -62,9 +62,10 @@
         <div class="row">
             <h1 class="col-12 mb-3 text-center text-md-left">Contact</h1>
             <div class="col-12 col-md-5 text-center text-md-left mb-5 mb-md-0">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatum maiores doloribus eaque id, eveniet vel exercitationem incidunt, illum quo eius recusandae facilis, nihil delectus labore minus. Veritatis, saepe ipsum.</p>
                 <p>Please feel free to give us a call or an email whenever suits you:</p>
-                <p><i class="fas fa-envelope"></i></i> sam@techgecko.uk</p>
-                <p><i class="fa-solid fa-phone"></i> 07985791808</p>
+                <a href="mailto:sam@tech-gecko.com"><i class="fas fa-envelope mb-2"></i></i> sam@tech-gecko.com</a><br>
+                <a href="tel:079857901808"><i class="fa-solid fa-phone"></i> 07985791808</a>
             </div>
             <div class="col-12 col-md-7 d-flex justify-content-center">
                 <div id="contactbox" class="d-flex justify-content-center align-items-center w-100">
