--- a/resources/packages.html
+++ b/resources/packages.html
@@ -65,54 +65,57 @@
         </div>
         <div class="col-12 row packagediv p-4">
           <div class="col-12 text-center text-md-left">
-              <h2>Standard Package</h2>
-              <div class="d-flex flex-column mb-4">
-                <h2 class="mr-3">£500</h2><h5><em>or £100 a month, over 6 months</em></h5>
-              </div>             
+              <h2>Standard Package</h2>           
           </div>
-          <div class="col-12 col-md-6 row text-center text-md-left">
-            <h5 class="col-6 pb-2">3 - 5 pages</h5>
-            <h5 class="col-6 pb-2">Modern design</h5>
-            <h5 class="col-6 pb-2">2 amends monthly</h5>
-            <h5 class="col-6 pb-2">£15 upkeep</h5>
+          <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
+            <div class="d-flex flex-column mb-4 text-center text-md-left">
+              <h2 class="mr-3">£500</h2><h5><em>or £100 a month, over 6 months</em></h5>
+            </div>  
+            <p class="col-6 pl-0 pb-2"><i class="far fa-file-alt mr-2"></i> Max 10 Pages</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-clipboard mr-2"></i> Modern Design</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-pencil-alt mr-2"></i> 2 Amends Monthly</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-coins mr-2"></i> £20 Upkeep</p>
           </div>
           <div class="col-12 col-md-6 text-center text-md-left">
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus.<br><br>Tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</p>
+          </div>
+        </div>
+        <div class="col-12 row packagediv p-4 my-5">
+          <div class="col-12 text-center text-md-left">
+              <h2>Premium Package</h2>           
+          </div>
+          <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
+            <div class="d-flex flex-column mb-4">
+              <h2 class="mr-3">£750</h2><h5><em>or £150 a month, over 6 months</em></h5>
+            </div>  
+            <p class="col-6 pl-0 pb-2"><i class="far fa-file-alt mr-2"></i> Max 25 Pages</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-clipboard mr-2"></i> Modern Design</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-pencil-alt mr-2"></i> 5 amends Monthly</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-coins mr-2"></i> £25 Upkeep</p>
+          </div>
+          <div class="col-12 col-md-6 text-center text-md-left">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus.<br><br>Tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</p>
+          </div>
+        </div>
+        <div class="col-12 row packagediv p-4">
+          <div class="col-12 text-center text-md-left">
+              <h2>Bespoke Package</h2>           
+          </div>
+          <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
+            <div class="d-flex flex-column mb-4">
+              <h2 class="mr-3"><span class="textcolor">*</span>£1000</h2><h5><em>or <span class="textcolor">*</span>£200 a month, over 6 months</em></h5>
+            </div>  
+            <p class="col-6 pl-0 pb-2"><i class="far fa-file-alt mr-2"></i> Unlimited Pages</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-clipboard mr-2"></i> Modern Design</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-pencil-alt mr-2"></i> Unlimited Amends</p>
+            <p class="col-6 pl-0 pb-2"><i class="fas fa-coins mr-2"></i> <span class="textcolor">*</span>£35 Upkeep</p>
+          </div>
+          <div class="col-12 col-md-6 text-center text-md-left">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus.<br><br>Tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</p>
           </div>
         </div>
     </div>
-    <div class="row my-5">
-      <div class="col-12 row packagediv p-4">
-        <div class="col-12 text-center text-md-left">
-            <h2>Premium Package</h2><br>
-        </div>
-        <div class="col-6 row">
-          <h5 class="col-6 pb-2">5 - 10 pages</h5>
-          <h5 class="col-6 pb-2">Modern design</h5>
-          <h5 class="col-6 pb-2">5 amends monthly</h5>
-          <h5 class="col-6 pb-2">£20 upkeep</h5>
-        </div>
-        <div class="col-6">
-          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</h5>
-        </div>
-      </div>
-    </div>
-    <div class="row my-5">
-      <div class="col-12 row packagediv p-4">
-        <div class="col-12 text-center text-md-left">
-            <h2>Bespoke Package</h2><br>
-        </div>
-        <div class="col-6 row">
-          <h5 class="col-6 pb-2">Max 20 pages</h5>
-          <h5 class="col-6 pb-2">Bespoke custom design</h5>
-          <h5 class="col-6 pb-2">Unlimited amends</h5>
-          <h5 class="col-6 pb-2">*£25 upkeep</h5>
-        </div>
-        <div class="col-6">
-          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</h5>
-        </div>
-      </div>
-    </div>
+    
 </div>
 </main>
 
