--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 </section>
 
 <section class="websitediv reveal">
-  <div class="container py-1 my-5">
+  <div class="container py-5 py-md-2 my-5">
     <div class="row m-0">
       <div class="col-12 p-0 py-1 p-md-5 row mt-1 text-center">
         <h2 class="col-12 mb-4">Already have a website?</h2>
