--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 <div class="overflow-hidden w-100 viddiv herodiv d-flex justify-content-center align-items-center align-items-md-end">
-  <video autoplay muted loop class="w-100 h-100 bannervid" src="resources/images/HeroVideo.mp4"></video>
+  <video autoplay muted preload="auto" loop class="w-100 h-100 bannervid" src="resources/images/HeroVideo.mp4"></video>
   <div class="videotext container position-absolute text-center text-md-left mb-md-5 ml-md-5 p-md-3 d-sm-block">
     <div class="row">
       <div class="col-12">
