--- a/resources/contact.html
+++ b/resources/contact.html
@@ -89,6 +89,7 @@
                                 <option value="standard">Standard</option>
                                 <option value="premium">Premium</option>
                                 <option value="bespoke">Bespoke</option>
+                                <option value="bespoke">Unsure</option>
                             </select>
                         </div>
                         <div class="form-group">
