--- a/resources/packages.html
+++ b/resources/packages.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Packages</title>
+    <title>Our Offers</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -50,7 +50,7 @@
   <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
     <div class="navbar-nav text-center align-items-center">
       <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
-      <a class="nav-item nav-link" href="/resources/packages">PACKAGES</a>
+      <a class="nav-item nav-link" href="/resources/packages">OFFERS</a>
       <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
       <a class="nav-item nav-link contactbtn sudoh6 d-none d-lg-block mx-3" href="#">CONTACT</a>
     </div>
@@ -60,10 +60,19 @@
 <main class="packagemain py-5">
   <div class="container my-3 my-md-5">
     <div class="row">
-        <div class="col-12 mb-4 text-center text-md-left">
-            <h1>Packages</h1>
+        <div class="col-12 text-center text-md-left mb-2">
+          <h1>Our Offers</h1>
         </div>
-        <div class="col-12 row packagediv p-4">
+        <div class="col-12 col-md-7 mb-4 text-center text-md-left">            
+            <p>All of our websites are hard coded from scratch, this gives them an advantage over website developing sites such as Wix or Squarespace. 
+              You will have a much larger range of customisation, less chance of bugs, and complete confidence that your site will look great no matter the screen size, from monitors and laptops, down to ipads and phones.</p>
+            <p>Having your website coded manually will also allow us to use all the tricks necessary to help your SEO score. 
+              This will allow your site to come up in more searches, ultimately getting you more visitors.</p>
+        </div>
+        <div class="col-12 col-md-5">
+          <img class="w-100" src="images/OffersImg.jpg" alt="WebDesign">
+        </div>
+        <div class="col-12 row packagediv p-4 mt-5">
           <div class="col-12 text-center text-md-left">
               <h2>Standard Package</h2>           
           </div>
