--- a/resources/contact.html
+++ b/resources/contact.html
@@ -50,7 +50,7 @@
   <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
     <div class="navbar-nav text-center align-items-center">
       <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
-      <a class="nav-item nav-link" href="/resources/packages">PACKAGES</a>
+      <a class="nav-item nav-link" href="/resources/packages">OFFERS</a>
       <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
       <a class="nav-item nav-link contactbtn sudoh6 d-none d-lg-block mx-3" href="#">CONTACT</a>
     </div>
@@ -62,7 +62,8 @@
         <div class="row">
             <h1 class="col-12 mb-3 text-center text-md-left">Contact</h1>
             <div class="col-12 col-md-5 text-center text-md-left mb-5 mb-md-0">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatum maiores doloribus eaque id, eveniet vel exercitationem incidunt, illum quo eius recusandae facilis, nihil delectus labore minus. Veritatis, saepe ipsum.</p>
+                <p>We believe in being personal here at TechGecko. We want you to feel comfortable while we discuss your website. We understand things can become complicated when discussing technology, and we want you to feel at ease.</p>
+                <p>Whether you wish to meet at a nearby cafe, or chat over a videocall, we'll make it work.</p>
                 <p>Please feel free to give us a call or an email whenever suits you:</p>
                 <a href="mailto:sam@tech-gecko.com"><i class="fas fa-envelope mb-3"></i></i> sam@tech-gecko.com</a><br>
                 <a href="tel:079857901808"><i class="fa-solid fa-phone"></i> 07985791808</a>
